--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
             <div id="eaganProject" class="workGridArea">
                 <h4>Eagan Arts Festival</h4>
-                <p>Wed redesign.</p>
+                <p>Web redesign.</p>
                 <button>View Project</button>
             </div>
         </div>
